data/issues_nolabel/nolabel_test_14373.txt
pip3 syntax error

I put in the code in python but it does not work i made sure that pip3 and python is updated and installed but it gives me this:



pip3 install tensorflow
File "", line 1
pip3 install tensorflow
^
SyntaxError: invalid syntax
pip install tensorflow
File "", line 1
pip install tensorflow
^
SyntaxError: invalid syntax
pip3 install --upgrade tensorflow
File "", line 1
pip3 install --upgrade tensorflow
^
SyntaxError: invalid syntax
pip3 install --upgrade tensorflow
File "", line 1
pip3 install --upgrade tensorflow
^
(I tryed multiple times)